2000-12-04  Bart Schaefer  <schaefer@zsh.org>

	* 13229: Doc/Makefile.in: Include mod_term*.yo in MODDOCSRC.

2000-12-04  Clint Adams  <schizo@debian.org>

	* 13227: configure.in, Src/Modules/terminfo.c,
	Src/Modules/terminfo.mdd: do not build terminfo
	module if tigetstr() is not found in the same library
	as tgetent(), indentation fix, use tputs() in echoti
	builtin for outputting string capabilities, use
	setupterm() for module boot.

2000-12-04  Peter Stephenson  <pws@csr.com>

	* 13226: configure.in, Config/defs.mk, Config/installfns.sh,
	Config/uninstallfns.sh, Src/zsh.mdd: fix --enable-function-subdirs
	for config.modules system; make Completion get its own functions
	subdirectory; tidy up other related bits.	

	* 13220: Doc/Zsh/params.yo: mention problems with $# e.g. `$#-'
	in arithmetic.

2000-12-03  Clint Adams  <schizo@debian.org>

	* 13216: Doc/Zsh/.distfiles, Doc/Zsh/builtins.yo,
	Doc/Zsh/mod_termcap.yo, Doc/Zsh/mod_terminfo.yo,
	Src/Modules/.distfiles: documentation for 13215.

	* 13215: Src/builtin.c, Src/Modules/termcap.c,
	Src/Modules/termcap.mdd, Src/Modules/terminfo.c,
	Src/Modules/terminfo.mdd: move echotc builtin to termcap
	module, add echoti builtin and terminfo parameter in
	terminfo module.

2000-11-30  Peter Stephenson  <pws@csr.com>

	* 13209: Makefile.in, configure.in, Config/funcinst.mk,
	Config/installfns.sh, Config/uninstallfns.sh, Src/zsh.mdd,
	Src/Modules/zftp.mdd, Src/Zle/complete.mdd, Src/Zle/zle.mdd:
	function installation information is now in config.modules.

2000-11-27  Bart Schaefer  <schaefer@zsh.org>

	* 13203: Completion/Builtins/_zstyle: Add missing quote.

2000-11-27  Sven Wischnowsky  <wischnow@zsh.org>

	* 13199: .cvsignore, Completion/User/_gprof: pattern-fix in
 	_gprof; add config.modules to .cvsignore
	
2000-11-27  Peter Stephenson  <pws@csr.com>

	* 13197: configure.in: fix problems with use of link parameter,
	directories for reading old config.modules file, and inconsistent
	values for auto parameter.
